# MianPet

./: README.md
MianPetClient/: CMakeLists.txt  MianPetClient.pro  README.md  Res.qrc
MianPetClient/MianPetData/: CleanShopData - backup.json  CleanShopData.json  FoodShopData - backup.json  FoodShopData.json  JobsData - backup.json  JobsData.json
MianPetClient/PetBackup/TestPet1/: PetToolButtonsContainer.cpp  PetToolButtonsContainer.h  SmallItemsContainerWindow.cpp  SmallItemsContainerWindow.h  TestPet.pro  Widget.cpp  Widget.h
MianPetClient/Pic/: Res.qrc  cazhuantou.kra  close-cloud.kra  close-cloud.psd  close.kra  close.psd  color.md  container-background.kra  container-background.psd  icon-base.kra  icon-base.psd  laboro.kra  lanxingtangguo.kra  left-arrow.kra  left-arrow.psd  qimiaoyuyan.kra  ref.kra  ref.psd  right-arrow.kra  right-arrow.psd
MianPetClient/Src/: CleanWindow.cpp  CleanWindow.h  FoodWindow.cpp  FoodWindow.h  FramelessWindow.cpp  FramelessWindow.h  ItemInformation.cpp  ItemInformation.h  LoginWindow.cpp  LoginWindow.h  PetClient.cpp  PetClient.h  PetProfileWindow.cpp  PetProfileWindow.h  PetStatusData.h  PetToolButtonsContainer.cpp  PetToolButtonsContainer.h  SettingsWindow.cpp  SettingsWindow.h  SmallItemsContainerWindow.cpp  SmallItemsContainerWindow.h  TransparentItemLabel.cpp  TransparentItemLabel.h  WorkingWindow.cpp  WorkingWindow.h  main.cpp
MianPetClient/Src/Config/: NetworkConstants.h  UiConstants.h
MianPetClient/Src/Tools/Detail/: Calculation.h
MianPetClient/Src/Tools/Network/: NetworkTools.h  Request.cpp  Request.h
MianPetClient/Src/Tools/Network/DataPackages/: BuyRequestData.cpp  BuyRequestData.h  CleanShopRequestData.cpp  CleanShopRequestData.h  CleanValueRequeastData.cpp  CleanValueRequeastData.h  CorekeyRequestData.cpp  CorekeyRequestData.h  DataPackage.cpp  DataPackage.h  FoodShopRequestData.cpp  FoodShopRequestData.h  FoodValueRequestData.cpp  FoodValueRequestData.h  HeartbeatData.cpp  HeartbeatData.h  JobsInfoRequestData.cpp  JobsInfoRequestData.h  LoginRequestData.cpp  LoginRequestData.h  LogoutData.cpp  LogoutData.h  PetProfileRequestData.cpp  PetProfileRequestData.h  RequestData.cpp  RequestData.h  UseRequestData.cpp  UseRequestData.h  WorkBeginRequest.cpp  WorkBeginRequest.h  WorkEndRequest.cpp  WorkEndRequest.h  WorkStatusRequestData.cpp  WorkStatusRequestData.h
MianPetClient/Src/Tools/Network/RSA-Library/: rsa.c  rsa.h
MianPetClient/Src/Tools/Ui/: UiTools.h
MianPetServer/: CMakeLists.txt
MianPetServer/Doc/: Database.md  DatabaseInit.sql  Rules.md
MianPetServer/Src/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  DatabaseSharedVars.h  RequestHandler.h  Server.cpp  Server.h  main.cpp
MianPetServer/Src/Config/: MianPetDataConstants.h  NetworkConstants.h
